// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard view has the proper structure 1`] = `
<main
  class="Dashboard"
>
  <header
    class="Dashboard__Header"
  >
    <div
      class="Dashboard__HeaderInfo"
    >
      <h1
        class="Dashboard__Title"
      >
        Apps by Host
      </h1>
      <div
        class="Dashboard__Caption"
      >
        for user 
        some.user@newrelic.com
      </div>
    </div>
    <div
      class="Dashboard__HeaderControls"
    >
      <label
        class="Toggle"
      >
        <input
          type="checkbox"
        />
        <span
          class="Toggle__Mark"
        />
        Show as list
      </label>
    </div>
  </header>
  <div
    class="Dashboard__Content"
  >
    <div
      class="Host"
    >
      <div
        aria-label="host url"
        class="Host__Title"
      >
        a2f3d.host.com
      </div>
      <div
        class="Host__AppList"
      >
        <div
          class="Host__App"
          data-app-id="app_3"
        >
          <div
            aria-label="apex score"
            class="Host__AppApex"
          >
            55
          </div>
          <div
            aria-label="application name"
            class="Host__AppName"
          >
            A
          </div>
        </div>
      </div>
    </div>
  </div>
</main>
`;

exports[`Dashboard view has the propper structure after toggling the layout to grid 1`] = `
<main
  class="Dashboard"
>
  <header
    class="Dashboard__Header"
  >
    <div
      class="Dashboard__HeaderInfo"
    >
      <h1
        class="Dashboard__Title"
      >
        Apps by Host
      </h1>
      <div
        class="Dashboard__Caption"
      >
        for user 
        some.user@newrelic.com
      </div>
    </div>
    <div
      class="Dashboard__HeaderControls"
    >
      <label
        class="Toggle"
      >
        <input
          type="checkbox"
        />
        <span
          class="Toggle__Mark"
        />
        Show as list
      </label>
    </div>
  </header>
  <div
    class="Dashboard__Content"
  />
</main>
`;

exports[`Dashboard view has the propper structure after toggling the layout to list 1`] = `
<main
  class="Dashboard Dashboard--listLayout"
>
  <header
    class="Dashboard__Header"
  >
    <div
      class="Dashboard__HeaderInfo"
    >
      <h1
        class="Dashboard__Title"
      >
        Apps by Host
      </h1>
      <div
        class="Dashboard__Caption"
      >
        for user 
        some.user@newrelic.com
      </div>
    </div>
    <div
      class="Dashboard__HeaderControls"
    >
      <label
        class="Toggle"
      >
        <input
          type="checkbox"
        />
        <span
          class="Toggle__Mark"
        />
        Show as an awesome grid
      </label>
    </div>
  </header>
  <div
    class="Dashboard__Content"
  />
</main>
`;

exports[`Host view has the proper structure 1`] = `
<div
  class="Host"
>
  <div
    aria-label="host url"
    class="Host__Title"
  >
    a2f3d.host.com
  </div>
  <div
    class="Host__AppList"
  >
    <div
      class="Host__App"
      data-app-id="app_0"
    >
      <div
        aria-label="apex score"
        class="Host__AppApex"
      >
        55
      </div>
      <div
        aria-label="application name"
        class="Host__AppName"
      >
        A
      </div>
    </div>
  </div>
</div>
`;

exports[`Toggle view has the proper structure 1`] = `
<label
  class="Toggle"
>
  <input
    type="checkbox"
  />
  <span
    class="Toggle__Mark"
  />
  
</label>
`;

exports[`changes the toggle text back when the user clicks it twice 1`] = `
<main
  class="Dashboard"
>
  <header
    class="Dashboard__Header"
  >
    <div
      class="Dashboard__HeaderInfo"
    >
      <h1
        class="Dashboard__Title"
      >
        Apps by Host
      </h1>
      <div
        class="Dashboard__Caption"
      >
        for user 
        some.user@newrelic.com
      </div>
    </div>
    <div
      class="Dashboard__HeaderControls"
    >
      <label
        class="Toggle"
      >
        <input
          type="checkbox"
        />
        <span
          class="Toggle__Mark"
        />
        Show as list
      </label>
    </div>
  </header>
  <div
    class="Dashboard__Content"
  />
</main>
`;
